feat: Add complete frontend with API contract for team collaboration
- Added comprehensive API_CONTRACT.md documenting all backend endpoints
- Updated .gitignore with environment and generated file exclusions
- Includes models, screens, services, and widgets for clinic dashboard
- Ready for frontend development collaboration

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,22 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Environment and local config
+.env
+.env.local
+*.local
+
+# Generated files
+*.g.dart
+*.freezed.dart
+*.mocks.dart
+
+# Coverage
+coverage/
+
+# Logs
+*.log
+
+# Lock files (optional - uncomment if you want to ignore)
+# pubspec.lock
