Make API URL configurable via environment variable

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,21 @@
-# Service Desk Frontend Environment Variables
-# Copy this file to .env and fill in your values
+# Service Desk Frontend Environment Configuration
+# ================================================
+# This file shows the environment variables used by the app.
+# These are passed during BUILD TIME, not runtime.
 
 # Backend API URL (without trailing slash)
-# For local development: http://127.0.0.1:8000
-# For production: https://your-backend-url.railway.app
+# ----------------------------------------
+# LOCAL DEVELOPMENT (default):
+#   flutter run -d chrome
+#   → Uses: http://127.0.0.1:8000
+#
+# PRODUCTION BUILD:
+#   flutter build web --dart-define=API_BASE_URL=https://your-backend.railway.app
+#   → Uses: https://your-backend.railway.app
+#
+# Examples:
+#   Railway:  https://service-desk-production.up.railway.app
+#   Render:   https://service-desk.onrender.com
+#   Fly.io:   https://service-desk.fly.dev
+
 API_BASE_URL=http://127.0.0.1:8000
